# sdr-docker

./: .gitignore  CLAUDE.md  Dockerfile  pyproject.toml
.cursor/rules/: native-sdr-setup.mdc  sdr-gateway-plan.md
.github/workflows/: pyhubblenetwork.yml
deploy/onbox/: Dockerfile.rootfs  README.md  autorun.sh  build-rootfs.sh  build-sdimg.sh  provision-sd.sh  sdr-gateway.service
deploy/onbox/boot/: initramfs-init.sh  uEnv.txt
deploy/pluto-plus-recovery/: .gitignore  DDR-FINDINGS.md  README.md  fetch-bootstrap.sh
deploy/pluto-plus-recovery/openocd/: diag_ddr.cfg  diag_map.cfg  ps7_init_32b2.tcl  recover_uboot.cfg
docs/: UBUNTU22_RESTART.md
docs/design/: 2026-06-03-onbox-decoder.md
docs/recovery/: pluto-plus-brick-recovery.md
src/stream_web/: analysis.py  app.py  config.py  gnuradio_tx.py  libiio_rx.py  processor.py  rx_backend.py  spectrogram.py  timing.py
src/stream_web/templates/: index.html
tests/: test_backend_selection.py  test_dashboard_mode.py  test_libiio_rx.py  test_mock_sdr.py
